<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="@string/server_preference"
        android:title="Specify Broadcast Server"
        android:summary="Broadcast txs directly to this node address rather then a random node" />

    <CheckBoxPreference
        android:key="@string/testnet_preference"
        android:title="Use TestNet"
        android:dependency="@string/server_preference"
        android:summary="Switches the port number to 6876. Must be used in conjunction with a custom testnet server." />

    <ListPreference
        android:key="@string/pin_timeout"
        android:title="PIN Timout"
        android:summary="How long before the app requires your pin number"
        android:entries="@array/minutes"
        android:entryValues="@array/minutes"
        android:defaultValue="5" />

    <ListPreference
        android:key="@string/account_details"
        android:title="Account Detail Website"
        android:summary="Which website to use when displaying account details"
        android:entries="@array/websites"
        android:entryValues="@array/websites_values"
        android:defaultValue="http://www.mynxt.info/account/" />

    <!--<CheckBoxPreference-->
        <!--android:key="checkbox_preference"-->
        <!--android:title="Google Push Notifications"-->
        <!--android:summary="Register with Google servers to allow txs to be pushed direct to your device" />-->
</PreferenceScreen>